[gd_scene load_steps=7 format=3 uid="uid://ciy38vertkdr0"]

[ext_resource type="Texture2D" uid="uid://ltoxok6ey74v" path="res://resources/circle.png" id="1"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://c6wxl5qjjjt1k" path="res://resources/square.png" id="3"]

[sub_resource type="Curve" id="2"]
_data = [Vector2(0, 0), 0.0, 1.09104, 0, 0, Vector2(1, 1), 1.28357, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="3"]
colors = PackedColorArray(0, 0, 0, 0, 0.991304, 0.991304, 0.991304, 0.991304)

[sub_resource type="CircleShape2D" id="1"]
radius = 19.2354

[node name="player" type="RigidBody2D"]
z_index = -1
mass = 0.01
script = ExtResource("2")

[node name="Line2D" type="Line2D" parent="."]
width = 52.0
width_curve = SubResource("2")
default_color = Color(1, 1, 1, 0.482353)
gradient = SubResource("3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.5, 1.5)
shape = SubResource("1")

[node name="plyr" type="Sprite2D" parent="."]
position = Vector2(0, -2.38419e-07)
rotation = 3.14159
scale = Vector2(0.443, 0.443)
texture = ExtResource("1")

[node name="Sprite2" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(32, -19)
scale = Vector2(0.03, 0.03)
texture = ExtResource("3")

[node name="Sprite3" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(45, -30)
scale = Vector2(0.024, 0.024)
texture = ExtResource("3")

[node name="Sprite4" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(57, -38)
scale = Vector2(0.018, 0.018)
texture = ExtResource("3")

[node name="Sprite5" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(66, -45)
scale = Vector2(0.012, 0.012)
texture = ExtResource("3")
